# resources

./: .gitignore  README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-lock.yaml.2628074536  prompt.md  pyproject.toml  tailwind.config.js  tsconfig.json  types.ts
.cursor/rules/: base.mdc  components.mdc  next-patterns.mdc  rule-composition.mdc  style-guide.mdc
.github/workflows/: update-star-data.yml
app/: client-page.tsx  docs.mdx  layout.tsx  loading.tsx  page.js  page.tsx
app/utils/: resource-utils.ts
components/: AccessibilityEnhancements.js  AccessibilityEnhancements.tsx  AddResourceForm.js  AddResourceForm.tsx  FilterOptions.js  FilterOptions.tsx  Footer.js  Footer.tsx  GitHubStarCount.js  GitHubStarCount.tsx  GitHubStarGraph.js  GitHubStarGraph.tsx  Header.js  Header.tsx  InfiniteScroll.js  InfiniteScroll.tsx  NetworkGraph.js  NetworkGraph.tsx  Pagination.js  Pagination.tsx  PerformanceOptimizations.js  PerformanceOptimizations.tsx  ResourceCard.js  ResourceCard.tsx  ResourceForm.js  ResourceForm.tsx  ResourceTable.tsx  SearchBar.js  SearchBar.tsx  StarCountDisplay.tsx  StarHistoryGraph.tsx
components/ui/: card.tsx  select.tsx  textarea.tsx
data/: resources-schema.json  resources.json  star-data.json
scripts/: __init__.py  generate-readme.js  generate-readme.ts  github_star_data.py
styles/: custom.css  globals.css
