[tool.poetry]
name = "resources"
version = "0.1.0"
description = "A beautifully stylized collection of resources."
authors = ["Wyatt Walsh <wyatt@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
uv = "^1.0.0"
loguru = "^0.5.3"
rich = "^10.0.0"
tenacity = "^8.0.1"
pydantic = "^2.0.0"
typer = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
