[project]
name = "scripts"
version = "0.1.0"
description = "some scripts for somne resources"
authors = [
    {name = "Wyatt Walsh", email = "wyattowalsh@gmail.com"}
]

dependencies = [
    "loguru>=0.5.3",
    "rich>=10.0.0",
    "tenacity>=8.0.1",
    "pydantic>=2.0.0",
    "typer>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
